fixed rendering of boxes on mobile devices

--- a/ClientApp/src/components/Content.css
+++ b/ClientApp/src/components/Content.css
@@ -21,6 +21,7 @@
   position: absolute;
   left: 50%;
   top: 30%;
+  max-height: 80%;
   transform: translateX(-50%);
   text-align: center;
   border-radius: 25px;
